# pharmpulse

./: .env.example  .gitignore  Makefile  README.md  catalog.json  config.yaml  decisions.md  docker-compose.yml  graph.gpickle  graph_summary.json  main.py  manifest.json  partial_parse.msgpack  pharmapulse_dashboards.twbx  pyproject.toml  run_results.json
.github/workflows/: dbt_ci.yml  dbt_docs.yml
airflow/: KILL_RETRY_PROOF.md  init_airflow_db.py
airflow/dags/: pharmapulse_daily.py
airflow/dbt_profiles/: profiles.yml
core/: config.py  extraction_runner.py  extractor_base.py
core/airflow/: dag_template.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_surrogate_key.sql
docs/: executive_memo.md  kpi_framework.md
domains/pharma/: config.yaml  extractors.py  field_mappings.yaml
domains/pharma/dbt/models/marts/: _schema.yml  bridge_trial_condition.sql  bridge_trial_intervention.sql  dim_condition.sql  dim_intervention.sql  dim_sponsor.sql  fct_approvals.sql  fct_trials.sql
domains/pharma/dbt/models/metrics/: _schema.yml  metric_duration_trends.sql  (+3 more)
notebooks/: 01_pharma_analysis.ipynb
scripts/: export_tableau_extracts.py  init_ops_schema.sql  init_raw_schema.sql  run_ctgov_extraction.py
streamlit/: app.py  db.py  requirements.txt  style.py
streamlit/pages/: 01_approval_landscape.py  02_phase_funnel.py  03_sponsor_league_table.py  04_duration_trends.py  05_sponsor_cohorts.py  06_termination_reasons.py  07_phase_distribution.py  08_pipeline_trust.py
streamlit/scripts/: create_readonly_role.sql
tests/: test_extractor_base.py
(+125 files in other folders)
