[project]
name = "pharmpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-postgres>=1.11.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
